# ProgramowanieGrafiki3D

./: CMakeLists.txt  README.md
src/Application/: CMakeLists.txt  stb_image.cpp  utils.cpp  utils.h
src/Exercises/Backface/: app.cpp
src/Exercises/Colors/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Exercise_01_Triangle/: CMakeLists.txt  app.cpp
src/Exercises/Exercise_02_Colors/: CMakeLists.txt  app.cpp
src/Exercises/Exercise_03_Indices/: CMakeLists.txt  app.cpp
src/Exercises/Exercise_04_Uniforms/: CMakeLists.txt  app.cpp
src/Exercises/Exercise_05_PVM/: CMakeLists.txt  app.cpp
src/Exercises/Exercise_06_Pyramid/: CMakeLists.txt  app.cpp
src/Exercises/Exercise_07_Backface/: CMakeLists.txt  app.cpp
src/Exercises/Exercise_08_WindowResize/: CMakeLists.txt  app.cpp  app.h
src/Exercises/Exercise_09_Zooming/: CMakeLists.txt  app.cpp  camera.h
src/Exercises/Exercise_10_CameraMovement/: CMakeLists.txt  app.cpp  camera.cpp  camera_controler.cpp  camera_controler.h  main.cpp  rotation.h
src/Exercises/Exercise_10_CameraMovement/Headers/: app.h
src/Exercises/Exercise_10_CameraMovement/Source/: app.cpp  camera.cpp  camera_controler.cpp
src/Exercises/Exercise_10_CameraMovement/shaders/: base_vs.glsl
src/Exercises/Exercise_11_2_SolarSystem/: CMakeLists.txt
src/Exercises/Exercise_11_2_SolarSystem/Headers/: app.h  pyramid.h
src/Exercises/Exercise_11_2_SolarSystem/Source/: app.cpp  camera.cpp  camera_controler.cpp  pyramid.cpp
src/Exercises/Exercise_11_PyramidAnimation/: CMakeLists.txt  main.cpp
src/Exercises/Exercise_11_PyramidAnimation/Headers/: app.h  camera.h  camera_controler.h  pyramid.h
src/Exercises/Exercise_11_PyramidAnimation/Source/: app.cpp  camera.cpp  camera_controler.cpp  pyramid.cpp
src/Exercises/Exercise_11_PyramidAnimation/shaders/: base_fs.glsl
src/Exercises/Exercise_12_TexturedPyramid/: CMakeLists.txt
src/Exercises/Exercise_12_TexturedPyramid/Headers/: app.h  pyramid.h
src/Exercises/Exercise_12_TexturedPyramid/Source/: app.cpp  camera_controler.cpp  pyramid.cpp
src/Exercises/Exercise_12_TexturedPyramid/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Exercise_13_PhongDiffuseLightning/: CMakeLists.txt
src/Exercises/Exercise_13_PhongDiffuseLightning/Headers/: app.h  quad.h
src/Exercises/Exercise_13_PhongDiffuseLightning/Source/: app.cpp  camera_controler.cpp  quad.cpp
src/Exercises/Exercise_13_PhongDiffuseLightning/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Exercise_14_PhongSpecular/: CMakeLists.txt
src/Exercises/Exercise_14_PhongSpecular/Headers/: app.h  camera.h  phong_material.h  quad.h
src/Exercises/Exercise_14_PhongSpecular/Source/: app.cpp  quad.cpp
src/Exercises/Exercise_14_PhongSpecular/shaders/: base_fs.glsl
src/Exercises/Indices/: app.cpp  main.cpp
src/Exercises/PVM/: app.cpp
src/Exercises/PVM/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Pyramid/: app.cpp  app.h
src/Exercises/Triangle/shaders/: base_fs.glsl
src/Exercises/Uniforms/: app.cpp
src/Exercises/Uniforms/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/WindowResize/: CMakeLists.txt  app.cpp
src/Exercises/Zooming/: CMakeLists.txt  app.cpp  app.h  camera.cpp
